# godot-packet-builder

./: .clangd  .gitignore  CMakeLists.txt  LICENSE.md  SConstruct  gen-clangd.bat
.github/workflows/: build.yml  release.yml
addon/: packet_builder.gdextension
addons/packet-builder/: packet_builder.gdextension
src/: bit_reader.cpp  bit_reader.hpp  bit_utils.hpp  bit_writer.cpp  bit_writer.hpp  field_encoder.cpp  field_encoder.hpp  packet_builder.cpp  packet_builder.hpp  packet_schema.cpp  packet_schema.hpp  register_types.cpp  register_types.hpp
src/encoders/: bool_encoder.cpp  bool_encoder.hpp  float_encoder.cpp  float_encoder.hpp  int_encoder.cpp  int_encoder.hpp  string_encoder.cpp  string_encoder.hpp  transform_encoder.cpp  transform_encoder.hpp  vector3_encoder.cpp  vector3_encoder.hpp
